Add on: Automatically update refresh token